Replace streams with collections