@@ -16,7 +16,7 @@ public class Utils {
                 suite("Passing Tests", passingTests.collect(Collectors.toList())),
                 suite("Failing Tests", failingTests.map(t ->
                     test(t.name, () -> {
-                        var results = run(Stream.of(testableRunner(t)), Collections.emptyList());
+                        var results = run(List.of(testableRunner(t)), Collections.emptyList());
                         return that(!results.succeeded, t.name + " should fail");
                     })).collect(Collectors.toList()))
         ));
